DB logic updates